--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "js-confetti": "^0.11.0"
+    "js-confetti": "^0.11.0",
+    "lottie-web": "^5.10.1"
   }
 }
